--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev = [
     "types-pyyaml>=6.0.12.20250915",
     "pandas-stubs>=2.3.2.250827",
     "bandit[toml]>=1.8.6",
+    "detect-secrets>=1.5.0",
 ]
 
 [build-system]
