Fix CI Docker build test and optimize Dependabot workflow
Docker CI Fix:
- Add 'load: true' to docker/build-push-action to load images into local daemon
- Fix Docker image testing by ensuring images are available for 'docker run'
- Resolve 'pull access denied' error in CI Docker build tests

Dependabot Optimization:
- Group security updates for consolidated PRs
- Group dev-dependencies for easier review
- Maintain existing reviewer/assignee configuration
- Improve dependency management workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,7 @@ jobs:
         context: .
         file: ./Dockerfile
         push: false
+        load: true  # Load image into local Docker daemon
         tags: jira2solidtime:test-full
         cache-from: type=gha
         cache-to: type=gha,mode=max
@@ -150,6 +151,7 @@ jobs:
         context: .
         file: ./docker/Dockerfile.app
         push: false
+        load: true  # Load image into local Docker daemon
         tags: jira2solidtime:test-app
         cache-from: type=gha
         cache-to: type=gha,mode=max
