--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,23 @@ updates:
     commit-message:
       prefix: "deps"
       include: "scope"
+    # Gruppiere zusammengehörige Updates
+    groups:
+      security-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "security"
+      dev-dependencies:
+        patterns:
+          - "ruff"
+          - "mypy"
+          - "pytest*"
+          - "bandit*"
+          - "pre-commit"
+        update-types:
+          - "minor"
+          - "patch"
 
   # Docker dependencies
   - package-ecosystem: "docker"
