--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,9 +9,9 @@ updates:
       time: "09:00"
     open-pull-requests-limit: 10
     reviewers:
-      - "fthiele"
+      - "f3rdy"
     assignees:
-      - "fthiele"
+      - "f3rdy"
     commit-message:
       prefix: "deps"
       include: "scope"
@@ -52,9 +52,9 @@ updates:
       time: "09:00"
     open-pull-requests-limit: 5
     reviewers:
-      - "fthiele"
+      - "f3rdy"
     assignees:
-      - "fthiele"
+      - "f3rdy"
     commit-message:
       prefix: "docker"
       include: "scope"
@@ -68,9 +68,9 @@ updates:
       time: "09:00"
     open-pull-requests-limit: 5
     reviewers:
-      - "fthiele"
+      - "f3rdy"
     assignees:
-      - "fthiele"
+      - "f3rdy"
     commit-message:
       prefix: "ci"
       include: "scope"
