Prepare v0.1.0-beta release
- Update CHANGELOG.md with comprehensive feature list
- Update docker-compose files to use beta image tags
- Update README.md with Docker installation instructions
- Add beta version badge and Docker usage examples

--- a/compose/docker-compose.app.yml
+++ b/compose/docker-compose.app.yml
@@ -3,9 +3,11 @@
 
 services:
   jira2solidtime:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile.app
+    image: cddsab/jira2solidtime:0.1.0-beta-app
+    # Alternative: Build from source
+    # build:
+    #   context: ..
+    #   dockerfile: docker/Dockerfile.app
     container_name: jira2solidtime-app
     volumes:
       - ./data:/app/data
