fix: add explicit GitHub token for release-please
- Ensure release-please has proper authentication
- Addresses potential permission issues with PR creation
- Works in conjunction with repository workflow permissions

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,7 @@ jobs:
         id: release
         with:
           release-type: python
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       # Optional: Only run release workflow if a release was created
       - name: Trigger release workflow
