fix: disable prerelease mode for clean 0.2.0 release
- Set prerelease-type to null to avoid beta suffixes
- Force clean semantic versioning going forward
- 0.2.0 represents stable production-ready release

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -15,7 +15,8 @@
         {"type": "ci", "section": "🤖 CI/CD"}
       ],
       "release-as": "0.2.0",
-      "prerelease": false
+      "prerelease": false,
+      "prerelease-type": null
     }
   }
 }
