fix: implement external sync schedule configuration
- Add environment variables for sync timing configuration
- Change default sync from every minute to every 10 minutes during business hours (6-22)
- Create template system for configurable Prometheus alert rules
- Add comprehensive configuration documentation

This is a speculative fix for recurring alerts without root cause analysis.
The optimization reduces API calls from 1440/day to 102/day and makes
scheduling externally configurable.

--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,23 @@ LOG_LEVEL=INFO
 DATA_DIR=./data
 LOG_DIR=./logs
 
+# Sync Scheduling Configuration
+# Sync schedule: cron format "minute hour day-of-month month day-of-week"
+# Default: Every 10 minutes during business hours (6 AM - 10 PM)
+SYNC_SCHEDULE=0 */10 6-22 * * *
+
+# Health check schedule: cron format
+# Default: Every minute for health monitoring
+HEALTH_CHECK_SCHEDULE=0 */1 * * * *
+
+# Alert thresholds (in seconds)
+# How long to wait before alerting about missing sync during business hours
+SYNC_ALERT_THRESHOLD=900
+
+# Business hours for sync operations (24-hour format)
+SYNC_START_HOUR=6
+SYNC_END_HOUR=22
+
 # Filtering (Optional - comma-separated values)
 FILTER_PROJECT_KEYS=PROJ1,PROJ2
 FILTER_USER_EMAIL=your-email@company.com
