--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,9 @@ services:
     labels:
       # Ofelia cron job configuration
       ofelia.enabled: "true"
-      ofelia.job-exec.sync.schedule: "0 */1 * * * *"
+      ofelia.job-exec.sync.schedule: "${SYNC_SCHEDULE:-0 */10 6-22 * * *}"
       ofelia.job-exec.sync.command: "uv run jira2solidtime sync"
-      ofelia.job-exec.health.schedule: "0 */1 * * * *"
+      ofelia.job-exec.health.schedule: "${HEALTH_CHECK_SCHEDULE:-0 */1 * * * *}"
       ofelia.job-exec.health.command: "uv run jira2solidtime health-check"
 
   metrics-server:
@@ -34,7 +34,10 @@ services:
     #   context: .
     #   dockerfile: Dockerfile
     container_name: jira2solidtime-metrics
-    command: ["sh", "-c", "cd /app && uv run python -c 'from src.jira2solidtime.monitoring.metrics_server import MetricsServer; server = MetricsServer(); server.start(); import time; time.sleep(999999)'"]
+    command:
+      - "sh"
+      - "-c"
+      - "cd /app && uv run python -c 'from src.jira2solidtime.monitoring.metrics_server import MetricsServer; server = MetricsServer(); server.start(); import time; time.sleep(999999)'"
     volumes:
       - metrics_vol:/metrics
     ports:
@@ -65,6 +68,7 @@ services:
       - ./monitoring/prometheus/alert_rules.yml:/etc/prometheus/alert_rules.yml:ro
       - metrics_vol:/metrics:ro
       - prometheus_data:/prometheus
+      - ./scripts/generate-alert-rules.sh:/generate-alert-rules.sh:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -77,6 +81,10 @@ services:
       - monitoring
     depends_on:
       - alertmanager
+    environment:
+      - SYNC_ALERT_THRESHOLD=${SYNC_ALERT_THRESHOLD:-900}
+      - SYNC_START_HOUR=${SYNC_START_HOUR:-6}
+      - SYNC_END_HOUR=${SYNC_END_HOUR:-22}
 
   alertmanager:
     image: prom/alertmanager:latest
