feat: implement centralized configuration management system
- Add SQLite-based configuration database with schema versioning
- Implement CLI configuration commands (get/set/list/export/import)
- Add FastAPI web service mode with admin dashboard
- Create configuration API endpoints for other services
- Add automatic environment variable migration to database
- Implement backup/restore functionality with hot-reload
- Update container integration for service mode
- Add monitoring configuration generation from database

This replaces the .env-based configuration with a robust,
enterprise-ready configuration management system that supports
both CLI and web-based configuration management.

Key features:
- Single source of truth for all configuration
- Audit trail of configuration changes
- API-driven configuration for microservices
- Backward compatibility with environment variables
- Hot-reload configuration without container restart
- Configuration validation and connection testing

Breaking changes:
- Container now runs in service mode by default
- Configuration stored in SQLite database instead of .env only
- Web dashboard available on port 8080

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -14,9 +14,8 @@
         {"type": "test", "section": "🧪 Tests"},
         {"type": "ci", "section": "🤖 CI/CD"}
       ],
-      "release-as": "0.2.0",
-      "prerelease": false,
-      "prerelease-type": null
+      "prerelease": true,
+      "prerelease-type": "beta"
     }
   }
 }
