--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ dependencies = [
     "rich>=13.0.0",
     "structlog>=23.0.0",
     "prometheus-client>=0.19.0",
+    "fastapi>=0.104.0",
+    "uvicorn>=0.24.0",
+    "jinja2>=3.1.0",
 ]
 requires-python = ">=3.10"
 
