fix: remove all hardcoded customer data and strengthen security
- Remove hardcoded organization_id, URLs, mappings from debug script
- Load all config from config.json instead of environment variables
- Expand .gitignore to block ALL data/ directory contents
- Add data/.gitkeep to maintain directory structure
- Update CLAUDE.md with strict security rules:
  - Never commit customer-specific data
  - No Claude mentions in commit messages
  - Only Conventional Commits format

--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,13 @@ temp_*.py
 temp_*.csv
 *_temp.*
 
-# Data files
-data/config.db
-data/history.db
+# Data files (all customer-specific data and databases)
+data/*.db
+data/*.sqlite
+data/*.sqlite3
+data/*.json
+data/*
+!data/.gitkeep
 
 # OS
 .DS_Store
@@ -69,4 +73,3 @@ data/history.db
 .Trashes
 ehthumbs.db
 Thumbs.db
-data/worklog_mapping.json
