--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -14,8 +14,10 @@
         {"type": "test", "section": "🧪 Tests"},
         {"type": "ci", "section": "🤖 CI/CD"}
       ],
-      "prerelease": true,
-      "prerelease-type": "beta"
+      "extra-files": [
+        "README.md",
+        "pyproject.toml"
+      ]
     }
   }
 }
