fix: implement two-mode Docker setup for development and production
- Add docker-compose.override.yml for local development with host UID mapping
- Update rebuild.sh to export UID/GID environment variables
- Remove sudo requirement from rebuild script (permissions now handled via UID mapping)
- Add documentation comments to docker-compose.yml explaining both modes

This resolves "attempt to write a readonly database" error by running the
container with the host user's UID in development mode, eliminating permission
mismatches on volume-mounted ./data directory.

Production deployments can use docker-compose.yml alone with fixed UID 1000.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,15 @@
+# docker-compose.yml
+# Production-ready configuration with fixed UID 1000
+#
+# For LOCAL DEVELOPMENT:
+#   - docker-compose.override.yml is automatically loaded
+#   - Runs container with your host user UID to avoid permission issues
+#   - Use: docker compose up
+#
+# For PRODUCTION DEPLOYMENT:
+#   - Use only this file (ignore or remove the override file)
+#   - Use: docker compose -f docker-compose.yml up
+#
 version: '3.8'
 
 services:
